syntax = "proto3";

package com.demo.univer.grpc.group.v1;

option java_package = "com.demo.univer.grpc.group.v1";
option java_multiple_files = true;

message Group {
  int64 id = 1;
  string name = 2;
}

message ExtGroup {
  int64 id = 1;
  string name = 2;
  int32 member_count = 3;
}

message GetGroupsRequest {
}

message GetGroupsResponse {
  repeated ExtGroup group = 1;
}

message CreateGroupRequest {
  string name = 1;
}

message CreateGroupResponse {
  Group group = 1;
}

service GroupService {
  rpc GetGroups(GetGroupsRequest) returns (GetGroupsResponse);
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);
}
